Removed additional argline